fixing gap on connections lines

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -207,7 +207,7 @@
     background: #ccc;
     position: absolute;
     top: 0;
-    height: 13px;
+    height: 14px;
     width: 1px;
     left: -1px;
   }
